--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web Planet Website",
   "main": "",
   "scripts": {
-    "server": "live-server --no-browser ./dist",
+    "server": "npx live-server --no-browser ./dist",
     "watch:tailwind": "npx postcss src/css/style.css --map --base src/css --dir dist/css -w",
     "watch:rollup": "cross-env NODE_ENV=development npx rollup --config --watch",
     "build:rollup": "cross-env NODE_ENV=production npx rollup --config"
@@ -23,6 +23,8 @@
     "cross-env": "^7.0.2",
     "jquery": "^3.5.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.4",
+    "postcss-cli": "^8.3.1",
     "postcss-import": "^12.0.1",
     "postcss-responsive-font": "^1.0.6",
     "rollup-plugin-terser": "^5.3.0",
